Halfway Spin using Controller Server

--- a/custom_task/CMakeLists.txt
+++ b/custom_task/CMakeLists.txt
@@ -18,8 +18,12 @@ add_executable(half_way_spin_node src/half_way_spin_node.cpp)
 
 ament_target_dependencies(half_way_spin_node rclcpp nav2_msgs nav_msgs geometry_msgs lifecycle_msgs rclcpp_action)
 
+add_executable(half_way_spin_bt_node src/half_way_spin_bt_node.cpp)
+
+ament_target_dependencies(half_way_spin_bt_node rclcpp nav2_msgs nav_msgs geometry_msgs lifecycle_msgs rclcpp_action)
+
 install(TARGETS
-  half_way_spin_node
+  half_way_spin_node half_way_spin_bt_node
   DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY 
